--- a/template.yaml
+++ b/template.yaml
@@ -276,20 +276,20 @@ Resources:
         #- Ref: ProductCreatedQueue
 
   #More info about SQS Queue Policy Resource: https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sqs-policy.html
-  OnFailureQueuePolicy:
-    Type: AWS::SQS::QueuePolicy 
-    Properties:
-      Queues:
-        - !Ref OnFailureQueue
-      PolicyDocument:
-        Statement:
-          Effect: Allow
-          Principal: '*'
-          Action: sqs:SendMessage
-          Resource: '*'
-          Condition:
-            ArnEquals:
-              aws:SourceArn: !Ref TargetTopic
+  #OnFailureQueuePolicy:
+    #Type: AWS::SQS::QueuePolicy 
+    #Properties:
+      #Queues:
+        #- !Ref OnFailureQueue
+      #PolicyDocument:
+        #Statement:
+          #Effect: Allow
+          #Principal: '*'
+          #Action: sqs:SendMessage
+          #Resource: '*'
+          #Condition:
+            #ArnEquals:
+              #aws:SourceArn: !Ref TargetTopic
          
   ProductCreatedEventFunction:
     Type: AWS::Serverless::Function
