--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,12 @@
       <groupId>software.amazon.awssdk</groupId>
       <artifactId>dynamodb</artifactId>
       <scope>compile</scope>
+         <exclusions>
+            <exclusion>
+               <groupId>software.amazon.awssdk</groupId>
+               <artifactId>netty-nio-client</artifactId>
+            </exclusion>
+         </exclusions>
     </dependency>
     <dependency>
       <groupId>software.amazon.awssdk</groupId>
