--- a/template.yaml
+++ b/template.yaml
@@ -145,6 +145,7 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       FunctionName: PutProduct
+      #AutoPublishAlias: liveVersion
       Handler: software.amazonaws.example.product.handler.CreateProductHandler::handleRequest
       Environment:
          Variables:
